2012-11-30  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-12-23
	* temporarily suppress dict-dup error for RooStats
	* M bin/checkPlugins.py

2012-10-31  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-22
	* bug #94500: pass a space-separated list of files to AtlCopyBSEvent
	* M python/scripts/filter_files.py

2012-10-26  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-12-21
	* adds --debug switch to printout more infos
	* M bin/dump-athfile.py

	* tagging PyUtils-00-12-20
	* fix bug #97959: attempt at handling event-less bs-files
	* M python/AthFile/impl.py

2012-10-03  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-19
	* add file_size metadata (in bytes)
	* M python/AthFile/impl.py
	* M bin/dump-athfile.py

2012-09-18  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-12-18
	* remove additional .root when creating empty output ROOT files
	* M bin/filter-and-merge-d3pd.py

2012-09-03  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-17
	* fixing bug #96214: swallow config parser errors in face of
	  asetup epilog non-configparser conformant sections.
	* M bin/setupWorkArea.py

2012-08-17  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-16
	* correctly handle the case when there is no pre-existing athfile cache
	* M python/AthFile/__init__.py

2012-08-16  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-15
	* correctly pick-up changes from athfile forked subprocess
	the bug was introduced with the refactoring from -00-12-03.
	as the peeking was not in the same process, the parent process
	was keeping its own cache, overriding whatever the subprocess had
	put in the persistent athfile.cache file.
	* introduce 2 new (debugging) env. vars:
	  - ATHFILE_DEBUG=1 -> set athfile.msg.level == VERBOSE
	  - PYUTILS_SHUTUP_DEBUG=1 -> display filtered out messages (ROOT,...)
	* M python/Helpers.py
	* M python/AthFile/__init__.py
	* M python/AthFile/impl.py
